tests/baselines/reference/accessorsEmit.errors.txt
tests/cases/compiler/accessorsEmit.ts(4,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/accessorsEmit.ts(11,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.


==== tests/cases/compiler/accessorsEmit.ts (2 errors) ====
    class Result { }
    
    class Test {
        get Property(): Result {
            ~~~~~~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            var x = 1;
            return null;
        }
    }
    
    class Test2 {
        get Property() {
            ~~~~~~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            var x = 1;
            return null;
        }
    }